force-app/main/default/objects/ServiceContract/ServiceContract.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>