force-app/main/default/objects/ServiceContract/fields/Contract_categories__c.field-meta.xml
<CustomField>
    <fullName>Contract_categories__c</fullName>
    <label>Contract categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Automation</fullName>
            </value>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Life Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>