force-app/main/default/objects/ServiceContract/fields/Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_No__c</fullName>
    <description>This is field is used to store the contract number</description>
    <label>Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>