force-app/main/default/objects/ServiceContract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BCP</fullName>
            </value>
            <value>
                <fullName>LCA</fullName>
            </value>
            <value>
                <fullName>Annual support (hardware)</fullName>
            </value>
            <value>
                <fullName>Annual support (software)</fullName>
            </value>
            <value>
                <fullName>Annual support (hardware&amp;software)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>