force-app/main/default/objects/ServiceContract/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <description>This field is used to language code</description>
    <label>Language Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>