force-app/main/default/objects/ServiceContract/fields/Parent_Contract_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_No__c</fullName>
    <description>This field is used to store the parent contract number</description>
    <label>Parent Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>