force-app/main/default/objects/ServiceContract/fields/Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract__c</fullName>
    <description>This field is used to store the renewed contract</description>
    <label>Renewed Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>