force-app/main/default/objects/ServiceContract/fields/YG_Sales_Manager_contact_no__c.field-meta.xml
<CustomField>
    <fullName>YG_Sales_Manager_contact_no__c</fullName>
    <description>This field is used to store the contact no of the sales manager.</description>
    <label>YG Sales Manager contact no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>