force-app/main/default/objects/ServiceContract/fields/YG_Sales_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>YG_Sales_Manager_Email__c</fullName>
    <description>This field is used to store the salesmanager email id</description>
    <label>YG Sales Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>