force-app/main/default/objects/ServiceContract/fields/YG_Sales_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>YG_Sales_Manager_Name__c</fullName>
    <description>This field is used to store the sales manager Name</description>
    <label>YG Sales Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>