force-app/main/default/objects/ServiceContract/fields/YG_Sales_Manager_profile_photo__c.field-meta.xml
<CustomField>
    <fullName>YG_Sales_Manager_profile_photo__c</fullName>
    <description>This filed is used to store the profile photo url.</description>
    <label>YG Sales Manager profile photo</label>
    <type>Url</type>
</CustomField>